# discord-help-bot

./: CONTRIBUTING.md  Cargo.toml  README.md
src/: main.rs
